c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/arrow_missing_member.c
struct s {
    int y;
};

int main(void) {
    struct s *ptr = 0;
    return ptr->;  // arrow must be followed by a member name
}